Fix align pricing table buttons

--- a/app/styles/includes/_pricing.scss
+++ b/app/styles/includes/_pricing.scss
@@ -75,6 +75,9 @@
           .pricing-desc{
             color: $text-light;
           }
+          .remove-margin{
+            margin-bottom: 0;
+          }
         }
       }
 
